change some things

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Redirect",
+    "message": "Peregrine",
     "description": "The name of the application"
   },
   "appDescription": {
